--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.8",
     "ms": "^2.1.3",
     "react": "^18.3.1",
